--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,19 @@
   "type": "module",
   "packageManager": "bun",
   "scripts": {
-    "build": "cd ../frontend \u0026\u0026 bun install \u0026\u0026 vite build --outDir=../backend/frontend/dist"
+    "build": "cd ../frontend && bun install && vite build --outDir=../backend/frontend/dist"
   },
   "dependencies": {
-    "encore.dev": "^1.48.8"
+    "@langchain/community": "^0.3.53",
+    "@langchain/core": "^0.3.72",
+    "@langchain/openai": "^0.6.9",
+    "cheerio": "^1.1.2",
+    "encore.dev": "^1.48.12",
+    "langsmith": "^0.3.63",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
+    "@types/node": "^24.3.0",
     "typescript": "^5.8.3"
   }
 }
