--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.3",
+    "recharts": "^3.4.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
