--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,7 +1,10 @@
-fastapi==0.115.0
-uvicorn[standard]==0.32.0
-pydantic-settings==2.6.0
-langchain-openai==0.2.9
-langchain-core==0.3.15
-python-dotenv==1.0.1
-
+fastapi
+uvicorn
+langchain-openai
+langchain
+langchain-core
+pydantic
+pydantic-settings
+SQLAlchemy
+asyncpg
+psycopg2-binary
